# rust-wsp

./: .gitignore  Cargo.toml  README.md
examples/: README.md  cli_gen_csv.rs  generate_wsp_csv.rs
src/: lib.rs  main.rs  pointset.rs
wsp/: Cargo.toml
wsp/scripts/: initial.csv  plot.py  wsp.csv
wsp/src/: main.rs  pointset.rs
