[package]
name = "wsp"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = "0.3.13"
rand = { version="0.8.4", features = ["small_rng"]}
csv = "1.1"
serde = { version = "1.0", features = ["derive"] }